--- a/color_draw_something.html
+++ b/color_draw_something.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>tracking.js - draw something</title>
-
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet" href="demo.css">
  <script src="https://cdnjs.cloudflare.com/ajax/libs/tracking.js/1.1.3/tracking-min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.2/dat.gui.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
-
   <script src="./splines.min.js"></script>
   
-
   <style>
     #canvas,
     #video {
@@ -37,15 +35,67 @@
       filter: FlipH;
       transform: scale(-1, 1);
     }
+    .demo-title { 
+  
+      background-image: url("https://i.pinimg.com/originals/07/d2/b9/07d2b9fffc0fe8789a0cfdd889aa6b5d.jpg");
+      height: 90px;
+      background-size: cover;
+     }
+     navbar{
+      width: 200px;
+      height: 100%;
+     }
+     .sidenav {
+    height: 100%;
+    width: 260px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    /*background-color:#884EA0;*/
+    background-color: white;
+    overflow-x: hidden;
+    padding-top: 120px;
+    /*float: left;*/
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQVdIipaPRecWbk7jnK3brlJIbm0ruXnLxC0fH_jCcJr14i-IHf");
+    background-size: cover;
+  }
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+h1  {
+  text-align: center;
+  color: white;
+}
+p {font-size: 20px;}
+.demo-title{
+  align-content: center;
+}
+.btn{align-items: center;margin-left: 25px;}
+h5{text-align: center;}
   </style>
 </head>
 <body>
-
+  <!-- header -->
   <div class="demo-title">
-    <h1>Coloring Activity</h1>
-    <a href="http://trackingjs.com" target="_parent">tracking.js</a> 
+    <h1>DRAWFY</h1>
   </div>
-
+  <!-- sidebar -->
+   <div class="sidenav">
+      <h5> INSTRUCTIONS </h5><br>
+      <button type="button" class="btn btn-primary">1. USE BLUE COLOR <br/> OBJECT TO DRAW</button><br/><br>
+      <button type="button" class="btn btn-light">2. USE WHITE COLOR<br/> OBJECT TO ERASE</button>
+      <hr/>
+      <button type="button" class="btn btn-secondary btn-sm">Listen Instructions</button>
+   </div>
+  <!-- video frame -->
   <div class="demo-frame">
     <div class="demo-container">
       <div class="draw-frame">
@@ -54,43 +104,34 @@
       </div>
     </div>
   </div>
-
   <script>
     window.onload = function() {
       var video = document.getElementById('video');
       var canvas = document.getElementById('canvas');
       var context = canvas.getContext('2d');
-
       var drawSegments = [[]];
       var segment = 0;
-
     tracking.ColorTracker.registerColor('blue', function(r, g, b) {
        if (r < 50 && g < 140 && b > 100) {
          return true;
        }
        return false;
      });
-
     tracking.ColorTracker.registerColor('white', function(r, g, b) {
        if (r > 244 && g > 240 && b > 220) {
          return true;
        }
        return false;
     });
-
     var tracker = new tracking.ColorTracker(['blue', 'white']);
-
       tracking.track('#video', tracker, { camera: true });
-
       tracker.on('track', function(event) {
         if (event.data.length === 0 && drawSegments[segment].length > 0) {
           segment++;
-
           if (!drawSegments[segment]) {
             drawSegments[segment] = [];
           }
         }
-
         event.data.forEach(function(rect) {
           if (rect.color === 'blue') {
             draw(rect);
@@ -99,35 +140,27 @@
           else if (rect.color === 'white') {
             erase(rect);
           }
-
         });
     });
-
       function draw(rect) {
         drawSegments[segment].push(rect.x + rect.width / 2, rect.y + rect.height / 2);
       }
-
       function erase(rect) {
         context.clearRect(rect.x, rect.y, rect.width, rect.height);
       }
-
       function isInsideRect(x, y, rect) {
         return rect.x <= x && x <= rect.x + rect.width &&
             rect.y <= y && y <= rect.y + rect.height;
       }
-
       (function loop() {
           for (var i = 0, len = drawSegments.length; i < len; i++) {
               drawSpline(context, drawSegments[i], 0.5, false);
           }
-
           drawSegments = [drawSegments[drawSegments.length - 1]];
           segment = 0;
-
           requestAnimationFrame(loop);
       }());
     };
   </script>
-
 </body>
 </html>
