--- a/color_draw_something.html
+++ b/color_draw_something.html
@@ -89,14 +89,15 @@
       margin-left: 25px;
       }
       h5{
-        margin-left: 20px;
+        margin-left: 10px;
         color: white;
       }
       #message{
         margin-left: 30px;
       }
       #speak{
-        margin-left: 50px
+        margin-left: 50px;
+        cursor: pointer;
       }
 
   </style>
@@ -114,9 +115,9 @@
       <div id="message">
       </br></br></br></br>
       </br></br></br>
-        <h5> INSTRUCTIONS </h5><br>
-        <p > USE BLUE COLOR OBJECT TO DRAW </br></br>
-         USE WHITE COLOR OBJECT TO ERASE </p>
+        <h5> INSTRUCTIONS!! </h5><br>
+        <p > USE BLUE COLOR OBJECT TO DRAW. </br></br>
+         USE WHITE COLOR OBJECT TO ERASE. </p>
       </div>
         <hr/>
         <br>
